deploy/v0.1/simpledash-with-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: simpledash
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpledash-ingress
  annotations:
  namespace: simpledash
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - simpledash.myurl.com
      secretName: simpledash-tls-secret
  rules:
  - host: simpledash.myurl.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simpledash
            port:
              number: 1337
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simpledash
  name: simpledash
  namespace: simpledash
spec:
  ports:
    - name: "simpledash"
      port: 1337
      targetPort: 1337
  type: LoadBalancer
  selector:
    app: simpledash
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simpledash
  name: simpledash
  namespace: simpledash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simpledash
  strategy: {}
  template:
    metadata:
      labels:
        app: simpledash
    spec:
      serviceAccountName: simpledash-sa
      containers:
        - image: hellgrenj/simpledash:v0.1.22
          name: simpledash
          ports:
          - containerPort: 1337
          resources: {}
      restartPolicy: Always
status: {}
